kbe (0.3.1-ubuntu) unstable; urgency=low

  * Added hotkeys to switch tabs
  * Added cancel button to save file dialog on exit
  * Improved new file dialog
  * Fixed plugin loading on linux
  * Fixed dock widget positions save/load
  * Fixed main window title
  * Port code to use qt5

  * scg. Added load/save of content state
  * scg. Added command to show/hide all contents
  * scg. Added node type changing depending on text identifier
  * scg. Added element type copying
  * scg. Fixed text identifier positions
  * scg. Fixed problem to load gwf files with 'content_visibility' attribute
  * scg. Fixed visual style of scg-elements
  * scg. Fixed default encoding to utf-8

  * scg. Added support of scs 0.2.0 standard
  * scg. Fixed default encoding to utf-8

 -- Denis Koronchik <denis.koronchik@gmail.com>  Tue, 5 May 2014 01:06:43 +0300

kbe (0.3.0-ubuntu) precise; urgency=low
  * Added plugins support
  * Refactored user guide documentation
  * Added scripts to make deb package on Ubuntu
  * Fixed errors with file opening
  * Disabled import/export menu
  * Resources for each editor moved into qrc files, and now them compiled into plugin
  * Added feedback dialog
  * Added coding standards
  * New tool icons set used
  * Fixed possible bugs with tabs
  * Added icons for tabs
  * Added guide dialog on startup
  * Added examples of files
  * Added new files dialog, that allows to create files with supported formats

  * scg. Improved drag and drop feature
  * scg. Now if drag file on sc.g-node, then that file will be set as content
  * scg. Fixed bug with sc.g-bus dragging
  * scg. Fixed bug with sc.g-pair dragging into contour
  * scg. Added object cloning
  * scg. Added possibility to navigate in sc.g-document with keyboard
  * scg. Added new command to select sc.g-elements
  * scg. Added possibilit ot move text identifiers
  * scg. Refactored undo/redo commands
  * scg. Refactored scg modes
  * scg. Added support of 0.1.0 version of SCg-code